<resources>
    <string name="app_name">Sanggar Tari Griya Kencana</string>
    <string name="open_nav">Open Drawer Layout</string>
    <string name="close_nav">Close Drawer Layout</string>
    <string name="fab_add_user">Add user</string>
    <string name="fab_add_jadwal">Add Jadwal</string>
    <string name="fab_add_absensi">Add Absensi</string>
    <string name="fab_add_report">Add Report</string>
    <string name="fab_add_lomba">Add Lomba</string>
    <string name="hello_blank_fragment_admin">Welcome to Home Page Admin</string>
    <string name="hello_blank_fragment_user">Welcome to Home Page User</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Admin</string>
    <string name="nav_header_subtitle">admin@test.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="label_username">Username</string>
    <string name="label_password">Password</string>
    <string name="label_login">Login</string>

    <string name="menu_home">Home</string>
    <string name="menu_user">User</string>
    <string name="menu_jadwal_kelas">Jadwal Kelas</string>
    <string name="menu_absensi">Absensi</string>
    <string name="menu_info_lomba">Informasi Lomba</string>
    <string name="menu_report">Report</string>

    <string name="title_activity_user">UserActivity</string>
    <string name="wirama">Wirama</string>
    <string name="wirasa">Wirasa</string>
    <string name="wiraga">Wiraga</string>
    <string name="tanggal">Tanggal</string>
    <string name="catatan">Catatan</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="save">Save</string>
    <string name="kelas">Kelas</string>
    <string name="nama">Nama</string>
    <string name="status_kehadiran">Status Kehadiran</string>
    <string name="alpha">Alpha</string>
    <string name="sakit">Sakit</string>
    <string name="izin">Izin</string>
    <string name="hadir">Hadir</string>
    <string name="nama_siswa">Nama Siswa</string>
    <string name="judul">Judul</string>
    <string name="photo">Photo</string>
    <string name="jam">Jam</string>
    <string-array name="kelas">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
    </string-array>

    <string name="fill_all_fields">Please fill all fields</string>
    <string name="report_added">Report added</string>
    <string name="failed_add_report">Failed to add report</string>
    <string name="report_updated">Report updated</string>
    <string name="failed_update_report">Failed to update report</string>
    <string name="jadwal_added">Jadwal berhasil ditambahkan</string>
    <string name="failed_add_jadwal">Gagal menambahkan jadwal</string>
    <string name="jadwal_updated">Jadwal berhasil diperbarui</string>
    <string name="failed_update_jadwal">Gagal memperbarui jadwal</string>
    <string name="lomba_added">Lomba berhasil ditambahkan</string>
    <string name="failed_add_lomba">Gagal menambahkan lomba</string>
    <string name="lomba_updated">Lomba berhasil diperbarui</string>
    <string name="failed_update_lomba">Gagal memperbarui lomba</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="scan_qr">Scan QR</string>
    <string name="deskripsi_wirama">Deskripsi Wirama</string>
    <string name="deskripsi_wirasa">Deskripsi Wirasa</string>
    <string name="deskripsi_wiraga">Deskripsi Wiraga</string>
</resources>