<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <androidx.cardview.widget.CardView
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginStart="@dimen/nav_header_horizontal_spacing"
        android:layout_marginTop="@dimen/nav_header_vertical_spacing"
        app:cardCornerRadius="150dp">
        <ImageView
            android:id="@+id/imageViewProfile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/nav_header_desc"
            app:srcCompat="@drawable/logo_sanggar_gk" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvUsernameProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/nav_header_horizontal_spacing"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/tvEmailProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/nav_header_horizontal_spacing"
        android:text="@string/nav_header_subtitle" />
</LinearLayout>