<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="?attr/colorSurface"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAppearance="?attr/textAppearanceHeadlineMedium"
        android:textColor="@color/purple_5b308c"
        android:textAlignment="center"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:cardCornerRadius="150dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/titleText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <ImageView
            android:id="@+id/logoImage"
            android:scaleType="fitXY"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo_sanggar_gk" />
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/cardview_logo"
        android:padding="24dp"
        android:background="@drawable/backgroud_layout">

        <TextView
            android:id="@+id/tvUsernameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_username"
            android:textStyle="bold"
            android:textSize="17dp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:boxBackgroundColor="?attr/colorSurface"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusTopStart="35dp"
            app:boxCornerRadiusTopEnd="35dp"
            app:boxCornerRadiusBottomStart="35dp"
            app:boxCornerRadiusBottomEnd="35dp"
            app:layout_constraintTop_toBottomOf="@id/tvUsernameLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvPasswordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_password"
            android:textStyle="bold"
            android:textSize="17dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:boxBackgroundColor="?attr/colorSurface"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusTopStart="35dp"
            app:boxCornerRadiusTopEnd="35dp"
            app:boxCornerRadiusBottomStart="35dp"
            app:boxCornerRadiusBottomEnd="35dp"
            app:layout_constraintTop_toBottomOf="@id/tvPasswordLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/label_login"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/purple_5b308c"
            style="@style/Widget.MaterialComponents.Button"
            app:layout_constraintTop_toBottomOf="@id/textInputLayout2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
