<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditorJadwalActivity">

    <LinearLayout
        android:id="@+id/header_jadwal"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:padding="5dp"
        android:orientation="horizontal"
        android:background="@color/purple_5b308c"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/backBtnJadwal"
            android:contentDescription="Kembali"
            android:minHeight="48dp"
            android:minWidth="48dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_back_ios_new_24"
            android:backgroundTint="@color/purple_5b308c"
            android:padding="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tambah Data Jadwal"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:paddingStart="8dp"/>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_jadwal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/backgroud_layout"
            android:clipToPadding="false"
            android:elevation="4dp"
            android:paddingBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.038"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/titleBarJadwal"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="@color/purple_5b308c"
                app:cardCornerRadius="30dp"
                app:cardElevation="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="DATA JADWAL BARU"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvKelasLabel"
                android:labelFor="@+id/edKelas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kelas"
                android:textStyle="bold"
                android:textSize="17dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/titleBarJadwal"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                app:boxBackgroundMode="filled"
                app:boxCornerRadiusBottomEnd="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusTopStart="30dp"
                app:boxStrokeColor="?attr/colorPrimary"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="3dp"
                app:hintTextAppearance="@style/TextAppearance.Material3.BodyMedium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvKelasLabel">

                    <EditText
                        android:id="@+id/edKelas"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvHariLabel"
                android:labelFor="@+id/edHari"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hari"
                android:textStyle="bold"
                android:textSize="17dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                app:boxBackgroundMode="filled"
                app:boxCornerRadiusBottomEnd="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusTopStart="30dp"
                app:boxStrokeColor="?attr/colorPrimary"
                app:boxStrokeWidth="00dp"
                app:boxStrokeWidthFocused="3dp"
                app:hintTextAppearance="@style/TextAppearance.Material3.BodyMedium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvHariLabel">
                <EditText
                    android:id="@+id/edHari"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvJamLabel"
                android:labelFor="@+id/edJam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Jam"
                android:textStyle="bold"
                android:textSize="17dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout2"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                app:boxBackgroundMode="filled"
                app:boxCornerRadiusBottomEnd="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusTopStart="30dp"
                app:boxStrokeColor="?attr/colorPrimary"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="3dp"
                app:hintTextAppearance="@style/TextAppearance.Material3.BodyMedium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvJamLabel">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/timeInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    app:endIconMode="custom"
                    app:endIconDrawable="@drawable/ic_access_time"
                    app:endIconContentDescription="Select time">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edJam"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:focusable="false"
                        android:clickable="true"
                        android:background="@color/white"
                        android:hint="@string/jam" />
                </com.google.android.material.textfield.TextInputLayout>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSaveJadwal"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/purple_5b308c"
                android:text="@string/save"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout3" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
